--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,1 +1,68 @@
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  vertical-align: baseline;
+  font-size: 100%;
+  line-height: 120%;
+  font-family: "Josefin Sans", sans-serif;
+}
+
+/****** responsive with flex *********/
+
+.wrapper {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  flex-flow: row wrap;
+  background-color: #f7f7f7;
+}
+
+.wrapper>* {
+  flex: 1 100%;
+}
+
+.main {
+  background: #f7f7f7;
+  height: 100%;
+}
+
+.aside-1 {
+  background: #4c4c4c;
+  color: #fff;
+}
+
+.sticky {
+  position: sticky;
+  top: 0;
+  height: 100%;
+}
+
+@media all and (min-width: 600px) {
+  .aside {
+    flex: 1;
+  }
+}
+
+@media all and (min-width: 800px) {
+  .main {
+    flex: 2 0px;
+  }
+  .aside-1 {
+    order: 1;
+    max-width: 350px;
+  }
+  .main {
+    order: 2;
+  }
+  /*.aside-2 { order: 3; }*/
+  /*.footer  { order: 4; }*/
+}
+
+/****** responsive with flex *********/
