--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,3 @@
-
 html, body {
   width: 100%;
   height: 100%;
@@ -11,58 +10,62 @@ html, body {
   font-family: "Josefin Sans", sans-serif;
 }
 
-/****** responsive with flex *********/
-
-.wrapper {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-flow: row wrap;
-  flex-flow: row wrap;
-  background-color: #f7f7f7;
-}
-
-.wrapper>* {
-  flex: 1 100%;
-}
 
 .main {
-  background: #f7f7f7;
-  height: 100%;
+  padding-left: 0;
+  padding-right: 0;
 }
 
-.aside-1 {
-  background: #4c4c4c;
-  color: #fff;
+.top {
+  height: 150px;
+  background: #e4e4e4;
+  margin: 50px 0;
+  text-align: center;
+  vertical-align: middle;
+  display: table;
+  width: 100%;
+  background-size: 50%;
+  background-position: 50%;
+  background-repeat: no-repeat;
 }
 
-.sticky {
-  position: sticky;
-  top: 0;
-  height: 100%;
+.top .title {
+  font-size: 35px;
+  font-weight: 600;
+  display: table-cell;
+  vertical-align: middle;
+  background: #e4e4e4;
+  line-height: normal;
 }
 
-@media all and (min-width: 600px) {
-  .aside {
-    flex: 1;
-  }
+.top .subtitle {
+  font-size: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  font-style: italic;
 }
 
-@media all and (min-width: 800px) {
-  .main {
-    flex: 2 0px;
-  }
-  .aside-1 {
-    order: 1;
-    max-width: 350px;
-  }
-  .main {
-    order: 2;
-  }
-  /*.aside-2 { order: 3; }*/
-  /*.footer  { order: 4; }*/
+.main .section {
+  padding: 30px 0;
+  margin-left: 50px;
 }
 
-/****** responsive with flex *********/
+.horizonLine {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  font-size: 25px;
+  font-weight: 600;
+  padding-top: 10px;
+}
+
+.horizonLine:after {
+  content: "";
+  flex: auto;
+  background: #8b8b8b;
+  height: 1px;
+  margin: auto;
+  margin-left: 20px;
+}
