--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -41,3 +41,18 @@ body {
   padding: 40px;
 }
 
+.container .right_Side .title {
+  font-size: 35px;
+  font-weight: 600;
+  vertical-align: middle;
+  line-height: normal;
+  text-align: center;
+}
+
+.container .right_Side .subtitle {
+  font-size: 15px;
+  margin-top: 5px;
+  margin-bottom: 10px;
+  font-style: italic;
+}
+
