--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,6 +29,8 @@ body {
   
 }
 
+
+
 .container .left_Side {
   position: relative;
   background-color: #003147;
@@ -59,6 +61,7 @@ body {
 .container .right_Side .section {
   padding: 30px 0;
   margin-left: 50px;
+  display: block;
 }
 
 .container .right_Side .section .horizonLine {
@@ -98,4 +101,39 @@ body {
   display: flex;
   justify-content: center;
   margin-right: 10px;
+}
+
+.container .right_Side .section .container1 .items {
+  flex: auto;
+  padding-right: 30px;
+}
+
+.container .right_Side .section .container1 .items .item {
+  margin: 20px 0;
+}
+
+.container .right_Side .section .container1 .items .item .entity {
+  padding: 10px 0;
+  display: flex;
+  align-items: center;
+}
+
+.container .right_Side .section .container1 .items .item .entity .what {
+  font-size: 20px;
+  font-weight: 600;
+  
+}
+
+.container .right_Side .section .container1 .items .item .entity .where {
+  font-size: 19px;
+  font-weight: 400;
+  
+}
+.container .right_Side .section .container1 .items .item .entity .where .when {
+  font-size: 15px;
+  opacity: 0.6;
+}
+
+.container .right_Side .section .container1 .items .item .entity div {
+  display: block;
 }
