--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -138,6 +138,13 @@ body {
   opacity: 0.6;
 }
 
+.container .right_Side .section .container1 .items .item .desc {
+  font-style: italic;
+  font-weight: 300;
+  margin-top: 15px;
+}
+
+
 
 
 
