--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,7 +144,14 @@ body {
   margin-top: 15px;
 }
 
-
+.container .right_Side .section .container1 .items .item .entity img {
+  height: 50px;
+  border-radius: 50%;
+  margin: 0 5px;
+  -webkit-filter: grayscale(100%);
+  filter: grayscale(100%);
+  transition: all 0.5s cubic-bezier(.25, .8, .25, 1);
+}
 
 
 
