--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -140,7 +140,7 @@ body {
 
 .container .right_Side .section .container1 .items .item .desc {
   font-style: italic;
-  font-weight: 300;
+  font-weight: 400;
   margin-top: 15px;
 }
 
@@ -151,6 +151,13 @@ body {
   -webkit-filter: grayscale(100%);
   filter: grayscale(100%);
   transition: all 0.5s cubic-bezier(.25, .8, .25, 1);
+}
+
+.container .right_Side .section .container1 .items .item .desc1 {
+  font-style: italic;
+  font-weight: 300;
+  margin-top: 15px;
+  font-size: 15px;
 }
 
 
