--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -157,5 +157,13 @@ body {
   font-size: 15px;
 }
 
+.container .right_Side .section .container1 .items .item .desc2 {
+  font-style: italic;
+  font-weight: bold;
+  margin-top: 15px;
+  font-size: 15px;
+}
+
+
 
 
