--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -164,6 +164,37 @@ body {
   font-size: 15px;
 }
 
+.videoContainer {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 10000;
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  visibility: hidden;
+  opacity: 0;
+}
 
+.videoContainer video {
+  position: relative;
+  max-width: 900px;
+  outline: none;
+}
 
+@media (max-width: 991px) 
+{
+  .videoContainer video
+  {
+    max-width: 90%;
+  }
+}
 
+.videoContainer.active{
+  visibility: visible;
+  opacity: 1;
+}
