--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -170,7 +170,7 @@ body {
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 10000;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgb(0, 0, 0);
   width: 100%;
   height: 100%;
   display: flex;
@@ -194,7 +194,17 @@ body {
   }
 }
 
-.videoContainer.active{
+.videoContainer.active {
   visibility: visible;
   opacity: 1;
+}
+
+.close {
+  position: absolute;
+  top: 100px;
+  right: 100px;
+  cursor: pointer;
+  filter: invert(1);
+  max-width: 32px;
+  
 }
