--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -21,15 +21,12 @@ body {
   position: relative;
   width: 100%;
   max-width: 95%;
-  min-height: 1200px;
+  min-height: 1250px;
   background-color: white;
   display: grid;
   grid-template-columns: 1fr 5fr;
-  box-shadow: 0 35px 55px rgba(0, 0, 0, 0.1);
-  
+  box-shadow: 0 35px 55px rgba(0, 0, 0, 0.1); 
 }
-
-
 
 .container .left_Side {
   position: relative;
@@ -40,9 +37,8 @@ body {
 .container .right_Side {
   position: relative;
   background-color: white;
-  padding: 40px;
+  padding: 20px;
 }
-
 
 
 .container .right_Side .title {
@@ -62,7 +58,7 @@ body {
 
 
 .container .right_Side .section {
-  padding: 30px 0;
+  padding: 20px 0;
   margin-left: 50px;
   display: block;
 }
@@ -118,12 +114,12 @@ body {
 }
 
 .container .right_Side .section .container1 .items .item .entity .what {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: 600;
 }
 
 .container .right_Side .section .container1 .items .item .entity .where {
-  font-size: 19px;
+  font-size: 15px;
   font-weight: 400;
 }
 
@@ -134,35 +130,59 @@ body {
 }
 
 .container .right_Side .section .container1 .items .item .entity .where .when {
-  font-size: 15px;
+  font-size: 13px;
   opacity: 0.6;
 }
 
 .container .right_Side .section .container1 .items .item .desc {
   font-style: italic;
   font-weight: 400;
-  margin-top: 15px;
+  margin-top: 10px;
 }
 
 .container .right_Side .section .container1 .items .item .entity img {
-  height: 50px;
-  border-radius: 50%;
+  height: 40px;
+  border-radius: 30%;
   margin: 0 5px;
 }
 
 .container .right_Side .section .container1 .items .item .desc1 {
   font-style: italic;
   font-weight: 300;
-  margin-top: 15px;
+  margin-top: 10px;
   font-size: 15px;
 }
 
 .container .right_Side .section .container1 .items .item .desc2 {
-  font-style: italic;
+  font-style: normal;
   font-weight: bold;
-  margin-top: 15px;
+  margin-top: 10px;
   font-size: 15px;
 }
+.container .right_Side .section .container1 .items .item .desc3 {
+  font-style: normal;
+  margin-top: 10px;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.container .right_Side .section .container1 .items .item .desc4 {
+  font-style: normal;
+  margin-top: 10px;
+  font-size: 15px;
+  font-weight: 300;
+}
+
+ul {
+  display: block;
+  list-style-type: disc;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+
 
 .videoContainer {
   position: fixed;
