--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -227,15 +227,37 @@ ul {
   max-width: 32px;
 }
 
-.profilePicture img {
-  margin: 0 auto;
+.profileText {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 20px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+.profileText .imgBx {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
   overflow: hidden;
+}
+
+.profileText .imgBx img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.profileText h2 {
+  color: white;
+  font-size: 1.5em;
+  margin-top: 20px;
+  text-transform: uppercase;
   text-align: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  width: 75%;
-  background-position: center center;
-  margin-left: 20px;
-  border: 2px solid white;
-  
+  font-weight: 600;
+  line-height: 1.4em;
 }
