--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -250,14 +250,28 @@ ul {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  border-radius: 100%;
+  border: 3px solid white;
 }
 
-.profileText h2 {
+.profileText h3 {
+  display: block;
   color: white;
-  font-size: 1.5em;
-  margin-top: 20px;
-  text-transform: uppercase;
-  text-align: center;
-  font-weight: 600;
-  line-height: 1.4em;
+  font-size: 1.17em;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  font-weight: bold;
 }
+
+.profileText i {
+  font-style: italic;
+  color: white;
+  font-weight: 300;
+}
+
+.contactInfo {
+  padding: 40px 0;
+}
+
