--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -366,13 +366,69 @@ ul {
 }
 
 .skillsText {
-  padding: 30px 0;
+  padding: 10px 0;
   border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 h2 {
   text-align: center;
   display: block;
-  padding: 30px 0;
+  padding-top: 30px;
   color: white;
 }
+.SkillsCenter ul {
+  display: block;
+  list-style-type: disc;
+  text-align: center;
+}
+
+.SkillsCenter ul li {
+  display: list-item;
+  list-style-type: none;
+  font-size: 16px;
+  color: white;
+  line-height: 1.8em;
+}
+
+.toolsText {
+  padding: 10px 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.ToolsCenter ul {
+  display: block;
+  list-style-type: disc;
+  text-align: center;
+}
+
+.ToolsCenter ul li {
+  display: list-item;
+  list-style-type: none;
+  font-size: 16px;
+  color: white;
+  line-height: 1.8em;
+}
+
+.LanguagesText {
+  padding: 10px 0;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.LanguagesCenter ul {
+  display: block;
+  list-style-type: disc;
+  text-align: center;
+}
+
+.LanguagesCenter ul li {
+  display: list-item;
+  list-style-type: none;
+  font-size: 16px;
+  color: white;
+  line-height: 1.8em;
+}
+
+
+
+
+
