--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,7 +13,30 @@ body {
   display: flex;
   justify-items: center;
   align-items: center;
-  min-height: 250vh;
+  min-height: 300vh;
+}
+
+.print {
+  background: #8c8c8c;
+  color: #fff;
+  width: 80px;
+  height: 80px;
+  text-align: center;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 5px solid #f7f7f7;
+  position: fixed;
+  bottom: 25px;
+  right: 100px;
+  cursor: pointer;
+  z-index: 100;
+}
+
+.print:hover {
+  box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
+  opacity: 0.88;
 }
 
 .container {
@@ -454,6 +477,13 @@ h2 {
   text-decoration: underline;
   font-size: 13px;
   
+}
+
+@media (max-width: 1000px) {
+  .container {
+    margin: 10px;
+    grid-template-columns: repeat(1,1fr);
+  }
 }
 
 
