--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -484,6 +484,30 @@ h2 {
     margin: 10px;
     grid-template-columns: repeat(1,1fr);
   }
+
+  .print{
+    background: #8c8c8c;
+    color: #fff;
+    width: 60px;
+    height: 60px;
+    text-align: center;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border: 5px solid #f7f7f7;
+    position: fixed;
+    bottom: 25px;
+    right: 30px;
+    cursor: pointer;
+    z-index: 100;  
+  }
+
+  .print:hover {
+    box-shadow: 0 14px 28px rgb(0 0 0 / 25%), 0 10px 10px rgb(0 0 0 / 22%);
+    opacity: 0.88;
+  }
+  
 }
 
 
